[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Room.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/GameUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=3]
[ext_resource path="res://Scripts/PieceDB.gd" type="Script" id=4]

[node name="Game" type="Node"]
script = ExtResource( 3 )

[node name="Room" parent="." instance=ExtResource( 1 )]

[node name="GameUI" parent="." instance=ExtResource( 2 )]

[node name="PieceDB" type="Node" parent="."]
script = ExtResource( 4 )
[connection signal="started_hovering_card" from="Room" to="GameUI" method="_on_Room_started_hovering_card"]
[connection signal="stopped_hovering_card" from="Room" to="GameUI" method="_on_Room_stopped_hovering_card"]
[connection signal="card_in_hand_requested" from="GameUI" to="." method="_on_GameUI_card_in_hand_requested"]
[connection signal="piece_requested" from="GameUI" to="." method="_on_GameUI_piece_requested"]
